<resources>
    <string name="app_name">Alfagift Mini</string>
    <string name="logo_official_store">Logo Official Store</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="official_store">Official Store</string>
    <string name="search_image_view">Search Image View</string>
    <string name="back_image_view">Back Image View</string>
    <string name="cart_image_view">Cart Image View</string>
    <string name="official_store_popular">Official Store Popular</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_product">Image Product</string>
    <string name="keranjang">Keranjang</string>
    <string name="stock_dari_gudang">Stock dari Gudang</string>
    <string name="stock_dari_toko">Stock dari Toko</string>
    <string name="stok_habis">Stok Habis</string>
    <string name="kirim_ke">Kirim Ke : <b>Rumah</b></string>
    <string name="beranda">Beranda</string>
    <string name="belanja">Belanja</string>
    <string name="promo">Promo</string>
    <string name="pesanan">Pesanan</string>
    <string name="akun">Akun</string>
    <string name="send_otp_code">Send OTP code</string>
    <string name="send_otp_again">Send again in\u0020</string>
    <string name="_62">+62</string>
    <string name="banner_list_title">Promo Alfagift</string>
    <string name="lihat_semua_promo">Lihat Semua Promo</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_connection">NO CONNECTION</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="submit">Submit</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="_081xxxxxxx">Eg: 081XXXXXXX</string>
    <string name="phone_format_error">Phone numbers must be between 11 – 13 digits</string>
    <string name="error_message">error message</string>
    <string name="keranjang_button">+Keranjang</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="bebas_ongkir">Bebas Ongkir</string>
    <string name="sapa_instant_delivery">SAPA Instant Delivery</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="confirm_password">Confirm password</string>
    <string name="categories">Kategori Produk</string>
    <string name="empty_field_error">Please fill out this field</string>
    <string name="password_length_error">Password length must be between 5 - 20</string>
    <string name="email_format_error">please use the correct email address format</string>
    <string name="confirm_password_error">Password are not the same</string>
    <string name="toolbar_greeting">Hai, %s</string>
    <string name="riwayat_pesanan">Riwayat Pesanan</string>
    <string name="lihat_sebagian">Lihat Sebagian</string>
    <string name="total_pengikut">%d Pengikut</string>
    <string name="promosi">Promosi</string>
    <string name="nama_product">Nama Product</string>
    <string name="terlaris">Terlaris</string>
    <string name="operator_brand_id"><![CDATA[&brandid=]]></string>
    <string name="cari_official_store">Cari Official Store</string>
    <string name="email_exists">Email already exists</string>
    <string name="stok_toko">Stok dari Toko</string>
    <string name="stok_gudang">Stok dari Gudang</string>
    <string name="besar_diskon">%d%%</string>
    <string name="unilever">Unilever</string>
    <string name="_176_141_pengikut">176.141 Pengikut</string>
    <string name="ikuti">Ikuti</string>
    <string name="belanja_berdasarkan_brand">Belanja berdasarkan brand</string>
    <string name="semua_produk">Semua Produk</string>
    <string name="profil_saya">Profil Saya</string>
    <string name="register_account">Register Account</string>
    <string name="hapus_riwayat">Hapus riwayat</string>
    <string name="kategori_pilihan">Kategori Pilihan</string>
    <string name="riwayat_pencarian">Riwayat Pencarian</string>
    <string name="promo_pada_produk_ini">Promo Pada Produk Ini</string>
    <string name="gratis_produk">Gratis Produk</string>
    <string name="dapatkan_gratis_produk">Dapatkan Gratis Produk</string>
    <string name="dengan_belanja_sesuai_syarat_ketentuan_yang_berlaku"><![CDATA[Dengan Belanja sesuai syarat & ketentuan yang berlaku]]></string>
    <string name="gratis">Gratis</string>
    <string name="tutup">Tutup</string>
    <string name="plus_pro">+%d</string>
    <string name="rp_0">Rp 0</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="tebus">Tebus</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="tebus_murah">Tebus Murah</string>
    <string name="_1">1</string>
    <string name="judul_barang">Judul Barang</string>
    <string name="rp_37_500">Rp.37.500</string>
    <string name="min">Min</string>
    <string name="plus">Plus</string>
    <string name="imageview_product">ImageView Product</string>
    <string name="rp_5000">Rp.5000</string>
    <string name="rp_8000">Rp.8000</string>
    <string name="brand_logo">Brand Logo</string>
    <string name="menunggu_pembayaran">Menunggu Pembayaran</string>
    <string name="dalam_proses">Dalam Proses</string>
    <string name="dikirim">Dikirim</string>
    <string name="selesai">Selesai</string>
    <string name="batal">Batal</string>
    <string name="alfagift_pesanan">Alfagift Pesanan</string>
    <string name="yuk_belanja">Yuk, Belanja</string>
    <string name="penawaran_terbaik">Penawaran Terbaik</string>
    <string name="gradient_color">Gradient Color</string>
    <string name="mau_belanja_apa">Mau belanja apa?</string>
    <string name="produk_rekomendasi_untuk_anda">Produk rekomendasi untuk anda</string>
    <string name="cari_produk_favorite_kamu_disini">Cari produk favorite kamu disini</string>
    <string name="shopping_list">Shopping List</string>
    <string name="pilih_semua_produk_10">Pilih semua produk (10)</string>
    <string name="lihat_shopping_list">Lihat Shopping List</string>
    <string name="direkomendasikan_untuk_anda">Direkomendasikan untuk anda</string>
    <string name="silahkan_cek_list_produk_yang_ingin_anda_beli">Silahkan cek list produk yang ingin Anda beli</string>
    <string name="cari_produk_di_alfagift">Cari Produk di Alfagift</string>
    <string name="paket">Paket</string>
    <string name="cari">Cari</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="otp_error_msg">OTP code is wrong, please try again</string>
    <string name="anda_yakin_ingin_keluar">Anda yakin ingin keluar?</string>
    <string name="keluar">Keluar</string>
    <string name="ya">Ya</string>
    <string name="tentang_alfagift">Tentang Alfagift</string>
    <string name="media_sosial">Media Sosial</string>
    <string name="_4_17_0_4170014">4.17.0 (4170014)</string>
    <string name="versi_aplikasi">Versi aplikasi</string>
    <string name="penjelasan_tentang_aplikasi_ini">Melalui Alfagift kamu bisa:\n
1. Berbelanja &amp; Melakukan pembayaran online\n
2. Barang belanjaanmu bisa diambil di toko atau dikirim ke rumah\n
3. Cek katalog promo terbaru setiap harinya\n
4. Program dan Penawaran spesial khusus member\n
5. Update informasi terkait member dan menukarkan point dengan mudah\n
6. Mengetahui lokasi Alfamart terdekat di sekitarmu</string>
    <string name="e_mail">E-mail</string>
    <string name="close">CLOSE</string>
    <string name="retry">RETRY</string>
    <string name="product_tidak_ditemukan">Product tidak ditemukan</string>
    <string name="categories_tidak_ditemukan">Categories tidak ditemukan</string>
</resources>