<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/red"
    android:elevation="0dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <ImageView
        android:id="@+id/iv_back_toolbar"
        android:src="@drawable/baseline_arrow_left_24"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/back_image_view" />

    <TextView
        android:layout_marginStart="40dp"
        android:id="@+id/tv_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="Official Store" />

    <ImageView
        android:id="@+id/iv_cart_toolbar"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="end"
        android:src="@drawable/outline_shopping_basket_24"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/cart_image_view" />

    <ImageView
        android:id="@+id/iv_search_toolbar"
        android:layout_gravity="end"
        android:src="@drawable/baseline_search_24"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/search_image_view" />

</androidx.appcompat.widget.Toolbar>