<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_light_gray"
    android:orientation="vertical"
    tools:context=".presentation.akun.AboutAppActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/top_drawable_lists"
        android:elevation="0dp"
        android:paddingBottom="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/btn_banner_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/mrgn_2"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/back_image_view"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/tv_promo_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mrgn_1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="24sp"
            tools:text="@string/banner_list_title" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tentang_alfagift"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <LinearLayout-->
    <!--        android:layout_marginTop="10dp"-->
    <!--        android:padding="12dp"-->
    <!--        android:layout_marginHorizontal="20dp"-->
    <!--        android:background="@color/light_gray"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content">-->

    <!--        <TextView-->
    <!--            android:text="Melalui Alfagift kamu bisa"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"/>-->

    <!--    </LinearLayout>-->

    <TextView
        android:id="@+id/tv_tentang_alfagift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:background="@color/light_gray"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="Melalui Alfagift kamu bisa" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="20dp"
            android:text="@string/versi_aplikasi"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/tv_versi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_versi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20dp"
            android:text="@string/_4_17_0_4170014"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/media_sosial"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/media_sosial"
        android:src="@drawable/media_sosial" />

</LinearLayout>