<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_tebus_murah"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginVertical="5dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tebus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_tebus"
            android:drawableStart="@drawable/baseline_percent_24_gold"
            android:padding="6dp"
            android:text="@string/tebus"
            android:textColor="@color/gold"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tebus_murah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/tebus_murah"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_tebus"
            app:layout_constraintLeft_toRightOf="@id/tv_tebus"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_accordion_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Minimal pembelejaan rp 100.000 untuk mendapatkan diskon 10% beneran lho" />

        <ImageView
            android:id="@+id/iv_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/arrow_down"
            android:src="@drawable/baseline_keyboard_arrow_down_24_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl_expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_arrow">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_list_tebus_murah"
            tools:listitem="@layout/item_product_tebus_murah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>