<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/cl_container_all_penawaran_terbaik"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/al_productlist_penawaran_terbaik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red">

            <ImageView
                android:id="@+id/iv_back_toolbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/back_image_view"
                android:src="@drawable/baseline_arrow_left_24" />

            <TextView
                android:id="@+id/tv_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/penawaran_terbaik"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_cart_toolbar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginHorizontal="20dp"
                android:contentDescription="@string/cart_image_view"
                android:src="@drawable/outline_shopping_basket_24" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.amar.library.ui.StickyScrollView
        android:id="@+id/ssv_penawaran"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/very_light_gray"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:stickyHeader="@+id/ll_sticky_banner_product_list">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.homepage.components.activity.banner.BannerPromoItemListActivity">

            <View
                android:id="@+id/iv_banner_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-40dp"
                android:background="@drawable/top_drawable_lists"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_sticky_banner_product_list"
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/iv_banner_image">

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider_banner_product_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerColor="@color/gray"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tl_penawaran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/divider_banner_product_list"
                    app:tabMode="auto" />

                <FrameLayout
                    android:id="@+id/container_fragment_penawaran"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="70dp"
                    app:layout_constraintTop_toBottomOf="@id/tl_official_store" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.amar.library.ui.StickyScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
